# Genie-TTS

./: .gitignore  pyproject.toml  requirements.txt  setup.py
Docker/: Dockerfile  requirements.txt  test_docker_deploy.py
runtime/: CMakeLists.txt
runtime/src/: T2SOnnxCPURuntime.cpp  main.cpp
runtime/win/: onnxruntime.def  onnxruntime.lib
src/genie_tts/: GetPhonesAndBert.py  Internal.py  ModelManager.py  PredefinedCharacter.py  Server.py  __init__.py  _internal.py
src/genie_tts/Converter/v2/: Converter.py  EncoderConverter.py
src/genie_tts/Converter/v2ProPlus/: Converter.py  PromptEncoderConverter.py
src/genie_tts/Core/: Inference.py  TTSPlayer.py
src/genie_tts/Data/v2/Models/: t2s_first_stage_decoder_fp32.onnx  t2s_stage_decoder_fp32.onnx
src/genie_tts/G2P/: SymbolsV2.py
src/genie_tts/G2P/Chinese/: ChineseG2P.py  Erhua.py  ToneSandhi.py
src/genie_tts/G2P/Chinese/Normalization/: char_convert.py  text_normlization.py
src/genie_tts/G2P/English/: EnglishG2P.py
src/genie_tts/GUI/: API Server.py  GUI.py  ServerManager.py
src/genie_tts/Utils/: Language.py  TextSplitter.py
test/: HuggingfaceUpload.py  TestAll.py  TestChara.py
