# pyproject.toml

[project]
name = "genie-tts"
version = "1.0.3"
authors = [
    { name = "High_Logic", email = "highlogic233@gmail.com" },
]
description = "GPT-SoVITS ONNX Inference Engine & Model Converter"
# readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "onnx",
    "onnxruntime==1.22.1",
    "numpy",
    "pyopenjtalk",
    "soundfile",
    "soxr",
    "pyyaml",
    "rich",
    "pyaudio",
    "huggingface_hub[hf_xet]",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/High-Logic/Genie"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"genie_tts" = [
    "Data/v2/Models/*",
    "Data/v2/Keys/*",
]

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "pybind11>=2.12.0",
    "cmake>=3.14",
    "patchelf; sys_platform == 'linux' or sys_platform == 'darwin'",
    "onnxruntime==1.22.1"
]
build-backend = "setuptools.build_meta"